--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
           GIT_VERSION: ${{ matrix.version }}
         if: matrix.arch == 'arm'
         run: |
-          docker build -t docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7 --build-arg ARCH=armv7 --build-arg OS=linux .
-          docker build -t docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7 --build-arg ARCH=armv7 --build-arg OS=linux -f cmd/prometheus-config-reloader/Dockerfile .
+          docker build -t docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-$ARCH --build-arg ARCH=armv7 --build-arg OS=linux .
+          docker build -t docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-$ARCH --build-arg ARCH=armv7 --build-arg OS=linux -f cmd/prometheus-config-reloader/Dockerfile .
 
       - name: Docker Publish
         env:
@@ -61,6 +61,7 @@ jobs:
         run: |
           echo $TOKEN | docker login -u $USER --password-stdin
           docker push docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-$ARCH
+          docker push docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-$ARCH
 
       
   push-manifest:
@@ -85,3 +86,7 @@ jobs:
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-am64" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate --arch arm "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION"
+
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-am64" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7"
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate --arch arm "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7"
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION"
