fix manifest create

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,10 +83,10 @@ jobs:
           GIT_VERSION: ${{ matrix.version }}
         run: |
           echo $TOKEN | docker login -u $USER --password-stdin
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-am64" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7"
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-amd64" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate --arch arm "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push "docker.io/rmb938/prometheus-operator-multi-arch:$GIT_VERSION"
 
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-am64" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7"
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create -a "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-amd64" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate --arch arm "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION" "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION-armv7"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push "docker.io/rmb938/prometheus-config-reloader-multi-arch:$GIT_VERSION"
