--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,6 +10,7 @@ jobs:
         arch:
           - amd64
           - arm
+          - arm64
         version:
           - v0.37.0
           - v0.38.0
